--- a/package.json
+++ b/package.json
@@ -75,6 +75,9 @@
     "coveragePathIgnorePatterns": [
       ".module.ts"
     ],
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "moduleNameMapper": {
+      "^src/(.*)$": "<rootDir>/$1"
+    }
   }
 }
